Update gradle to 2.10